<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2016, The Linux Foundation. All rights reserved.

  Redistribution and use in source and binary forms, with or without
  modification, are permitted provided that the following conditions are
  met:
      * Redistributions of source code must retain the above copyright
        notice, this list of conditions and the following disclaimer.
      * Redistributions in binary form must reproduce the above
        copyright notice, this list of conditions and the following
        disclaimer in the documentation and/or other materials provided
        with the distribution.
      * Neither the name of The Linux Foundation nor the names of its
        contributors may be used to endorse or promote products derived
        from this software without specific prior written permission.

  THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
  ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
  BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
  SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
  BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
  OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
  IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timerViewLayout"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/uvMeter_container"
        style="@style/VUMeterLayoutStyle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal" >

        <com.lovdream.factorykit.libs.VUMeter
                android:id="@+id/uvMeter"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"/>
    </RelativeLayout>

        <TextView
            android:id="@+id/stateMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5px"
            android:text="@string/recording"
            android:paddingBottom="16dp"
            android:textSize="@dimen/message_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/line"
            android:background="@drawable/dash_line"/>

        <TextView
            android:id="@+id/text_hint"
            android:text="@string/headset_key_test1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
             android:textSize="20dp"
            />
        <TextView
            android:id="@+id/key_name_headset"
            android:text="@string/key_name_headsethook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

</LinearLayout>
